--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clarifai": "^2.9.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "helmet": "^3.18.0",
     "knex": "^0.16.3",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.10",
